# OpencvC

./: local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/safe/silent/opencvc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BitmapUtils.cpp  BitmapUtils.h  ScanNumber.cpp  ScanNumber.h  native-lib.cpp  trim.cpp  trim.h
app/src/main/java/com/safe/silent/opencvc/: BitmapCache.java  CardView.java  MainActivity.java  ScanActivity.java
app/src/main/jniLibs/include/opencv2/: calib3d.hpp  core.hpp  cvconfig.h  features2d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  photo.hpp  videoio.hpp
app/src/main/jniLibs/include/opencv2/core/: affine.hpp  core_c.h  cuda.hpp  directx.hpp  fast_math.hpp  mat.hpp  mat.inl.hpp  matx.hpp  ocl.hpp  opengl.hpp  operations.hpp  optim.hpp  persistence.hpp  saturate.hpp  softfloat.hpp  traits.hpp  types.hpp  types_c.h  utility.hpp
app/src/main/jniLibs/include/opencv2/core/cuda/: border_interpolate.hpp  saturate_cast.hpp  simd_functions.hpp
app/src/main/jniLibs/include/opencv2/core/hal/: interface.h  intrin.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp  intrin_sse_em.hpp
app/src/main/jniLibs/include/opencv2/core/utils/: trace.hpp
app/src/main/jniLibs/include/opencv2/dnn/: all_layers.hpp  dnn.hpp
app/src/main/jniLibs/include/opencv2/flann/: all_indices.h  allocator.h  any.h  autotuned_index.h  composite_index.h  config.h  defines.h  dist.h  dynamic_bitset.h  flann_base.hpp  general.h  ground_truth.h  heap.h  hierarchical_clustering_index.h  index_testing.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  logger.h  lsh_index.h  lsh_table.h  matrix.h  nn_index.h  object_factory.h  params.h  random.h  result_set.h  sampling.h  saving.h  simplex_downhill.h  timer.h
app/src/main/jniLibs/include/opencv2/imgproc/: imgproc_c.h  types_c.h
app/src/main/jniLibs/include/opencv2/imgproc/detail/: gcgraph.hpp
app/src/main/jniLibs/include/opencv2/objdetect/: detection_based_tracker.hpp
app/src/main/jniLibs/include/opencv2/photo/: cuda.hpp
app/src/main/jniLibs/include/opencv2/stitching/detail/: util.hpp  warpers.hpp
app/src/main/jniLibs/include/opencv2/video/: background_segm.hpp  tracking.hpp
app/src/main/jniLibs/include/opencv2/videoio/: cap_ios.h  registry.hpp  videoio_c.h
app/src/main/res/layout/: activity_main.xml  cm.xml
app/src/main/res/values/: strings.xml
(+3 files in other folders)
